clusters/KC-Int/deployments/default/code-server/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: lscr.io/linuxserver/code-server:4.90.3
          volumeMounts:
            - name: homepage
              mountPath: /pvcs/homepage
            - name: homeassistant
              mountPath: /pvcs/homeassistant
      volumes:
        - name: homepage
          persistentVolumeClaim:
            claimName: homepage
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
